@@ -21,7 +21,7 @@
 
   <item
     android:color="?attr/colorSecondary"
-    android:alpha="0.09"
+    android:alpha="0.10"
     android:state_enabled="true" />
 
   <item android:color="@android:color/transparent"/>
