@@ -2,7 +2,7 @@
 agp = "8.5.2"
 appcompat = "1.7.0"
 fragment = "1.8.2"
-navigation = "2.7.7"
+navigation = "2.8.0-rc01"
 preference = "1.2.1"
 material = "1.13.0-alpha05"
 
